--- a/CrmMVC.Web/Views/Shared/_Layout.cshtml
+++ b/CrmMVC.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Companies">FIRMY</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Projects">PROJEKTY</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Products">PRODUKTY</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
