--- a/CrmMVC.Web/Views/Shared/_Layout.cshtml
+++ b/CrmMVC.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">START</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Companies">FIRMY</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="Index">FIRMY</a>
                         </li>                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Projects">PROJEKTY</a>
