Work on Company views in progress

--- a/CrmMVC.Web/Views/Company/AddCompany.cshtml
+++ b/CrmMVC.Web/Views/Company/AddCompany.cshtml
@@ -1,12 +1,12 @@
-﻿@model CrmMVC.Application.ViewModels.Company.NewCompanyVM
+﻿@model CrmMVC.Application.ViewModels.Company.CompanyVm
 
 @{
     ViewData["Title"] = "Dodawanie firmy";
 }
 
-<h1>AddCompany</h1>
+<h1>FIRMY</h1>
 
-<h4>NewCompanyVM</h4>
+<h4>Nowa firma</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -31,7 +31,7 @@
 </div>
 <br />
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Powrót</a>
 </div>
 
 @section Scripts {
