--- a/CrmMVC.Web/Views/Company/AddCompany.cshtml
+++ b/CrmMVC.Web/Views/Company/AddCompany.cshtml
@@ -1,12 +1,12 @@
-﻿@model CrmMVC.Application.ViewModels.Company.CompanyVm
+﻿@model CrmMVC.Application.ViewModels.Company.AddCompanyVm
 
 @{
-    ViewData["Title"] = "AddCompany";
+    ViewData["Title"] = "Nowa firma";
 }
 
-<h1>AddCompany</h1>
+<h1>FIRMY</h1>
 
-<h4>CompanyVm</h4>
+<h4>Dodawanie nowej firmy</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,9 +18,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Voivodeship" class="control-label"></label>
-                <input asp-for="Voivodeship" class="form-control" />
-                <span asp-validation-for="Voivodeship" class="text-danger"></span>
+                <label asp-for="VoivodeshipId" class="control-label"></label>
+                <select asp-for="VoivodeshipId" asp-items="@(new SelectList(Model.Voivodeships,"Id","VoivodeshipName"))" class="form-control">
+                    <option> --- Wybierz województwo ---</option>
+                </select>
+                <span asp-validation-for="VoivodeshipId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
@@ -28,19 +30,22 @@
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyType" class="control-label"></label>
-                <input asp-for="CompanyType" class="form-control" />
-                <span asp-validation-for="CompanyType" class="text-danger"></span>
+                <label asp-for="companyTypeId" class="control-label"></label>
+                <select asp-for="companyTypeId" asp-items="@(new SelectList(Model.CompanyTypes,"Id","CompanyTypeName"))" class="form-control">
+                    <option> --- Wybierz typ ---</option>
+                </select>
+                <span asp-validation-for="companyTypeId" class="text-danger"></span>
             </div>
+            </br>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Dodaj" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Powrót</a>
 </div>
 
 @section Scripts {
