--- a/CrmMVC.Web/Views/Company/Edit.cshtml
+++ b/CrmMVC.Web/Views/Company/Edit.cshtml
@@ -1,23 +1,22 @@
 ﻿@model CrmMVC.Application.ViewModels.Company.AddCompanyVm
 
 @{
-    ViewData["Title"] = "Nowa firma";
+    ViewData["Title"] = "Edycja firmy";
 }
 
 <h1>FIRMY</h1>
 
-<h4>Dodawanie nowej firmy</h4>
+<h4>Edycja firmy</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddCompany">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label">Nazwa</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="CompanyName" class="control-label">Nazwa</label>
+                <input asp-for="CompanyName" class="form-control" />
+                <span asp-validation-for="CompanyName" class="text-danger"></span>
             </div>
-            </br>
             <div class="form-group">
                 <label asp-for="VoivodeshipId" class="control-label">Województwo</label>
                 <select asp-for="VoivodeshipId" asp-items="@(new SelectList(Model.Voivodeships,"Id","VoivodeshipName"))" class="form-control">
@@ -25,13 +24,11 @@
                 </select>
                 <span asp-validation-for="VoivodeshipId" class="text-danger"></span>
             </div>
-            </br>
             <div class="form-group">
                 <label asp-for="City" class="control-label">Miejscowość</label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
-            </br>
             <div class="dropdown">
                 <label asp-for="CompanyTypeId" class="control-label">Typ</label>
                 <select asp-for="CompanyTypeId" asp-items="@(new SelectList(Model.CompanyTypes,"Id","CompanyTypeName"))" class="form-control">
@@ -39,9 +36,9 @@
                 </select>
                 <span asp-validation-for="CompanyTypeId" class="text-danger"></span>
             </div>
-            </br>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Dodaj" class="btn btn-primary" />
+                <input type="submit" value="Zapisz" class="btn btn-primary" />
             </div>
         </form>
     </div>
