--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>FIRMY</h1>
 
 <p>
-    <a asp-action="AddCompany">+ Nowa Firma</a>
+    <a asp-action="Create">+ Nowa Firma</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.CompanyType)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Szczegóły", "ShowDetails", new { id=item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id=item.Id}) |
+                @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
