ContactPerson work started

--- a/CrmMVC.Web/Views/Shared/_Layout.cshtml
+++ b/CrmMVC.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="Index">FIRMY</a>
-                        </li>                        
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ContactPerson" asp-action="Index">OSOBY KONTAKTOWE</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Projects">PROJEKTY</a>
                         </li>
