--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>FIRMY</h1>
 
 <p>
-    <a asp-action="Create">+ Nowa Firma</a>
+    <a asp-action="Create">+ Nowa firma</a>
 </p>
 <table class="table">
     <thead>
