work on create new contact person

--- a/CrmMVC.Web/Views/Company/Details.cshtml
+++ b/CrmMVC.Web/Views/Company/Details.cshtml
@@ -48,6 +48,10 @@
 </div>
 <br />
 <h5>Osoby</h5>
+@Html.ActionLink("+ Nowa osoba", "Create", "ContactPersonController" , new { id = Model.Id }) 
+@* <p>
+    <a asp-controller="ContactPerson" asp-action="Create" asp>+ Nowa osoba</a>
+</p> *@
 <table class="table">
     <thead>
         <tr>
