--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.CompanyType)
             </td>
             <td>
-                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
+                @* @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) | *@
                 @Html.ActionLink("Szczegóły", "Details", new { id=item.Id}) |
                 @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
             </td>
