--- a/CrmMVC.Web/Views/Company/Edit.cshtml
+++ b/CrmMVC.Web/Views/Company/Edit.cshtml
@@ -45,7 +45,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Powrót</a>
+    <a asp-action="Details" asp-route-id="@Model.Id">Powrót do firmy</a> |
+    <a asp-action="Index">Powrót do listy firm</a>
 </div>
 
 @section Scripts {
