--- a/CrmMVC.Web/Views/Company/Details.cshtml
+++ b/CrmMVC.Web/Views/Company/Details.cshtml
@@ -44,6 +44,7 @@
 </div>
 <div>
     @Html.ActionLink("Edycja", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Usuwanie", "Delete", new { id = Model.Id }) |
     <a asp-action="Index">Powrót</a>
 </div>
 <br />
@@ -98,7 +99,7 @@
                 <td>
                     @Html.ActionLink("Edycja", "Edit", "ContactPerson", new { id=item.Id }) |
                     @Html.ActionLink("Szczegóły", "Details", "ContactPerson", new { id = item.Id }) |
-                    @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
+                    @Html.ActionLink("Usuwanie", "Delete", "ContactPerson", new { id = item.Id })
                 </td>
             </tr>
         }
