--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -51,7 +51,7 @@
             <td>
                 @* @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) | *@
                 @Html.ActionLink("Szczegóły", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
+                @Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
             </td>
         </tr>
 }
