--- a/CrmMVC.Web/Views/ContactPerson/Details.cshtml
+++ b/CrmMVC.Web/Views/ContactPerson/Details.cshtml
@@ -56,6 +56,7 @@
 </div>
 <div>
     @Html.ActionLink("Edycja", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Usuwanie", "Delete", new { id = Model.Id }) |
     <a asp-controller="Company" asp-action="Details" asp-route-id="@Model.CompanyId">Powrót do firmy</a> |
     <a asp-controller="ContactPerson" asp-action="Index">Powrót do osób</a>
 </div>
