--- a/CrmMVC.Web/Views/ContactPerson/Index.cshtml
+++ b/CrmMVC.Web/Views/ContactPerson/Index.cshtml
@@ -59,9 +59,9 @@
                 @Html.DisplayFor(modelItem => item.Company)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Usuwanie", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
