--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CrmMVC.Application.ViewModels.Company.CompanyVm>
+﻿@model CrmMVC.Application.ViewModels.Company.ListCompanyVm
 
 @{
     ViewData["Title"] = "FIRMY";
@@ -31,7 +31,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Companies) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
