--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">+ Nowa firma</a>
 </p>
+<form asp-action="Index" asp-controller="Company" method="post">
+<div class="row"> 
+    <input type="text" asp-for="SearchString" name="searchString" id="searchString"/>
+    <input type="submit" value="Wyszukaj"/>
+</div>
+<div class="row">
 <table class="table">
     <thead>
         <tr>
@@ -31,7 +37,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Companies) {
+@foreach (var item in Model.Companies) 
+{
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
@@ -49,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.CompanyType)
             </td>
             <td>
-                @* @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) | *@
+                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Szczegóły", "Details", new { id=item.Id}) |
                 @Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
             </td>
@@ -57,3 +64,39 @@
 }
     </tbody>
 </table>
+</div>
+<div class="row">
+    <table>
+        <tr>
+                @for(int i = 1; i< Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
+                {
+                    <td>
+                        @if (i != Model.CurrentPage)
+                        {
+                            <a href="javascript:PagerClick(@i)">@i</a>
+                        }
+                        else
+                        {
+                            <span>@i</span>
+                        }
+                    </td>
+                }
+        </tr>
+    </table>
+    <input type="hidden" name="pageNumber" id="pageNumber"/>
+    <input type="hidden" name="pageSize" id="pageSize" value="10"/>
+
+</div>
+</form>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        function PagerClick(index)
+        {
+            document.getElementById("pageNumber").value = index;
+            document.forms[0].submit();
+        }
+    </script>
+    
+}
