--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -1,102 +1,112 @@
 ﻿@model CrmMVC.Application.ViewModels.Company.ListCompanyVm
 
 @{
-    ViewData["Title"] = "FIRMY";
+	ViewData["Title"] = "FIRMY";
 }
 
 <h1>FIRMY</h1>
 
 <p>
-    <a asp-action="Create">+ Nowa firma</a>
+	<a asp-action="Create">+ Nowa firma</a>
 </p>
 <form asp-action="Index" asp-controller="Company" method="post">
-<div class="row"> 
-    <input type="text" asp-for="SearchString" name="searchString" id="searchString"/>
-    <input type="submit" value="Wyszukaj"/>
-</div>
-<div class="row">
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                Nazwa
-            </th>
-            <th>
-                Województwo
-            </th>
-            <th>
-                Miejscowość
-            </th>
-            <th>
-                Typ
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Companies) 
-{
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompanyName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Voivodeship)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompanyType)
-            </td>
-            <td>
-                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Szczegóły", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-</div>
-<div class="row">
-    <table>
-        <tr>
-                @for(int i = 1; i< Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
-                {
-                    <td>
-                        @if (i != Model.CurrentPage)
-                        {
-                            <a href="javascript:PagerClick(@i)">@i</a>
-                        }
-                        else
-                        {
-                            <span>@i</span>
-                        }
-                    </td>
-                }
-        </tr>
-    </table>
-    <input type="hidden" name="pageNumber" id="pageNumber"/>
-    <input type="hidden" name="pageSize" id="pageSize" value="10"/>
-
-</div>
+	<div class="row">
+		<input type="text" asp-for="CompanyNameSearchString" name="companyNameSearchString" id="companyNameSearchString" />
+	</div>
+	@* <label asp-for="VoivodeshipId" class="control-label">Województwo</label> *@
+	<div class="col">
+		<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"VoivodeshipName","VoivodeshipName"))" class="form-control">
+			<option></option>
+		</select>
+	</div>
+	<div class="col">
+		<input type="submit" value="Wyszukaj" />
+	</div>
+	<div class="row">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+						Id
+					</th>
+					<th>
+						Nazwa
+					</th>
+					<th>
+						Województwo
+					</th>
+					<th>
+						Miejscowość
+					</th>
+					<th>
+						Typ
+					</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model.Companies)
+				{
+					<tr>
+						<td>
+							@Html.DisplayFor(modelItem => item.Id)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.CompanyName)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Voivodeship)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.City)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.CompanyType)
+						</td>
+						<td>
+							@Html.ActionLink("Edycja", "Edit", new { id = item.Id }) |
+							@Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
+							@Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+	<div class="row">
+		<table>
+			<tr>
+				dupa
+				@Model.Count //
+				@Model.PageSize //
+				@Math.Ceiling(Model.Count / (double)Model.PageSize)
+				@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
+				{
+					<td>
+						@if (i != Model.CurrentPage)
+						{
+							<a href="javascript:PagerClick(@i)">@i</a>
+						}
+						else
+						{
+							<span>@i</span>
+						}
+					</td>
+				}
+			</tr>
+		</table>
+		<input type="hidden" name="pageNumber" id="pageNumber" />
+		<input type="hidden" name="pageSize" id="pageSize" value="2" />
+	</div>
 </form>
 
 @section Scripts
 {
-    <script type="text/javascript">
-        function PagerClick(index)
-        {
-            document.getElementById("pageNumber").value = index;
-            document.forms[0].submit();
-        }
-    </script>
-    
+	<script type="text/javascript">
+		function PagerClick(index) {
+			document.getElementById("pageNumber").value = index;
+			document.forms[0].submit();
+		}
+	</script>
+
 }
