--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -10,18 +10,55 @@
 	<a asp-action="Create">+ Nowa firma</a>
 </p>
 <form asp-action="Index" asp-controller="Company" method="post">
-	<div class="row">
-		<input type="text" asp-for="CompanyNameSearchString" name="companyNameSearchString" id="companyNameSearchString" />
+	<div class="container text-center">
+		<div class="row">
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="companyName">Nazwa</span>
+					<input type="text" class="form-control" aria-describedby="companyName" asp-for="CompanyNameSearchString" name="companyNameSearchString" id="companyNameSearchString">
+				</div>
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<label class="input-group-text" for="voivodeship">Województwo</label>
+					<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"VoivodeshipName","VoivodeshipName"))" id="voivodeship">
+						<option></option>
+					</select>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="input-group mb-3">
+						<span class="input-group-text" id="city">Miejscowość</span>
+						<input type="text" class="form-control" aria-describedby="city" asp-for="CitySearchString" name="citySearchString" id="citySearchString">
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="type">Typ</label>
+						<select class="form-select" asp-for="CompanyTypeSearchString" asp-items="@(new SelectList(Model.CompanyTypes,"CompanyTypeName","CompanyTypeName"))" id="type">
+							<option></option>
+						</select>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	@* <label asp-for="VoivodeshipId" class="control-label">Województwo</label> *@
-	<div class="col">
-		<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"VoivodeshipName","VoivodeshipName"))" class="form-control">
-			<option></option>
+
+	<div class="col mb-3">
+		<input type="submit" value="Wyszukaj" class="btn btn-dark" />
+	</div>
+
+	<div class="input-group mb-3">
+		<label class="input-group-text" for="inputGroupSelect02">Wyniki wyszukiwania</label>
+		<select class="form-select"  id="pageSize">
+			<option value="5" selected> 5 </option>
+			<option value="10">10</option>
+			<option value="15">15</option>
+			<option value="20">20</option>
 		</select>
 	</div>
-	<div class="col">
-		<input type="submit" value="Wyszukaj" />
-	</div>
+
 	<div class="row">
 		<table class="table">
 			<thead>
@@ -76,10 +113,6 @@
 	<div class="row">
 		<table>
 			<tr>
-				dupa
-				@Model.Count //
-				@Model.PageSize //
-				@Math.Ceiling(Model.Count / (double)Model.PageSize)
 				@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
 				{
 					<td>
@@ -96,7 +129,6 @@
 			</tr>
 		</table>
 		<input type="hidden" name="pageNumber" id="pageNumber" />
-		<input type="hidden" name="pageSize" id="pageSize" value="2" />
 	</div>
 </form>
 
