--- a/CrmMVC.Web/Views/Company/Index.cshtml
+++ b/CrmMVC.Web/Views/Company/Index.cshtml
@@ -60,8 +60,60 @@
 	<div class="col mb-3">
 		<input type="submit" value="Wyszukaj" class="btn btn-dark" />
 	</div>
+	<div class="row">
+		<div class="col">
+			<table align="center">
+				<tr>
+					<td>
+						@if (Model.CurrentPage != 1)
+						{
+							<a href="javascript:PagerClick(1)">˂˂</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.CurrentPage-1)">˂</a>
+							<span>|</span>
+						}
+						else
+						{
+							<span>˂˂</span>
+							<span>|</span>
+							<span>˂</span>
+							<span>|</span>
+						}
+					</td>
+					@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
+					{
+						<td>
+							@if (i != Model.CurrentPage)
+							{
+								<a href="javascript:PagerClick(@i)">@i</a>
+							}
+							else
+							{
+								<span>@i</span>
+							} |
+						</td>
+						Model.NumberOfPages = i;
 
-
+					}
+					<td>
+						@if (Model.CurrentPage != Model.NumberOfPages)
+						{
+							<a href="javascript:PagerClick(@Model.CurrentPage+1)">˃</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.NumberOfPages)">˃˃</a>
+						}
+						else
+						{
+							<span>˃</span>
+							<span>|</span>
+							<span>˃˃</span>
+						}
+					</td>
+				</tr>
+			</table>
+			<input type="hidden" name="pageNumber" id="pageNumber" />
+		</div>
+	</div>
 	<div class="row">
 		<table class="table">
 			<thead>
@@ -112,42 +164,6 @@
 				}
 			</tbody>
 		</table>
-	</div>
-	<div class="row">
-		<div class="col">
-			<table align="center">
-				<tr>
-					<td>
-					<a href="javascript:PagerClick(1)">˂˂</a> |
-					</td>
-					<td>
-						<a href="javascript:PagerClick(@Model.CurrentPage-1)">˂</a> |
-					</td>
-					@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
-					{
-						<td>
-							@if (i != Model.CurrentPage)
-							{
-								<a href="javascript:PagerClick(@i)">@i</a>
-							}
-							else
-							{
-								<span>@i</span> 
-							} |
-						</td>
-						Model.NumberOfPages = i;
-
-					}
-					<td>
-						<a href="javascript:PagerClick(@Model.CurrentPage+1)">˃</a> |
-					</td>
-					<td>
-						<a href="javascript:PagerClick(@Model.NumberOfPages)">˃˃</a>
-					</td>
-				</tr>
-			</table>
-			<input type="hidden" name="pageNumber" id="pageNumber" />
-		</div>
 	</div>
 </form>
 
