--- a/CrmMVC.Web/Views/ContactPerson/Index.cshtml
+++ b/CrmMVC.Web/Views/ContactPerson/Index.cshtml
@@ -1,69 +1,191 @@
-﻿@model IEnumerable<CrmMVC.Application.ViewModels.ContactPerson.ContactPersonVm>
+﻿@model CrmMVC.Application.ViewModels.ContactPerson.ListContactPersonVm
 
 @{
-    ViewData["Title"] = "OSOBY KONTAKTOWE";
+	ViewData["Title"] = "OSOBY KONTAKTOWE";
 }
 
 <h1>OSOBY KONTAKTOWE</h1>
 
+<form asp-action="Index" asp-controller="ContactPerson" method="post">
+	<div class="container text-center">
+		<div class="row">
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="firstName">Imię</span>
+					<input type="text" class="form-control" aria-describedby="firstName" asp-for="FirstNameSearchString" name="firstNameSearchString" id="firstNameSearchString">
+				</div>
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="lastName">Nazwisko</span>
+					<input type="text" class="form-control" aria-describedby="lastName" asp-for="LastNameSearchString" name="LastNameSearchString" id="lastNameSearchString">
+				</div>
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="email">Email</span>
+					<input type="text" class="form-control" aria-describedby="email" asp-for="EmailSearchString" name="EmailSearchString" id="emailSearchString">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="input-group mb-3">
+						<span class="input-group-text" id="phoneNumber">Telefon</span>
+						<input type="text" class="form-control" aria-describedby="phoneNumber" asp-for="PhoneNumberSearchString" name="PhoneNumberSearchString" id="phoneNumberSearchString">
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="role">Stanowisko</label>
+						<select class="form-select" asp-for="RoleSearchString" asp-items="@(new SelectList(Model.Roles,"PersonRoleName","PersonRoleName"))" id="role">
+							<option></option>
+						</select>
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="pageSize">Wyniki wyszukiwania</label>
+						<select class="form-select" asp-for="PageSize" id="pageSize">
+							<option value="5"> 5 </option>
+							<option value="10"> 10 </option>
+							<option value="15">15</option>
+							<option value="20">20</option>
+						</select>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                Imię
-            </th>
-            <th>
-                Nazwisko
-            </th>
-            <th>
-                E-mail
-            </th>
-            <th>
-                Telefon
-            </th>
-            <th>
-                Stanowisko
-            </th>
-            <th>
-                Firma
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Company)
-            </td>
-            <td>
-                @Html.ActionLink("Edycja", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Usuwanie", "Delete", new { id=item.Id })
-            </td>
-        </tr>
+	<div class="col mb-3">
+		<input type="submit" value="Wyszukaj" class="btn btn-dark" />
+	</div>
+	<div class="row">
+		<div class="col">
+			<table align="center">
+				<tr>
+					<td>
+						@if (Model.CurrentPage != 1)
+						{
+							<a href="javascript:PagerClick(1)">˂˂</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.CurrentPage-1)">˂</a>
+							<span>|</span>
+						}
+						else
+						{
+							<span>˂˂</span>
+							<span>|</span>
+							<span>˂</span>
+							<span>|</span>
+						}
+					</td>
+					@for (int i = 1; i <= Math.Ceiling(Model.Count / (double)Model.PageSize); i++)
+					{
+						<td>
+							@if (i != Model.CurrentPage)
+							{
+								<a href="javascript:PagerClick(@i)">@i</a>
+							}
+							else
+							{
+								<span>@i</span>
+							} |
+						</td>
+						Model.NumberOfPages = i;
+
+					}
+					<td>
+						@if (Model.CurrentPage != Model.NumberOfPages)
+						{
+							<a href="javascript:PagerClick(@Model.CurrentPage+1)">˃</a>
+							<span>|</span>
+							<a href="javascript:PagerClick(@Model.NumberOfPages)">˃˃</a>
+						}
+						else
+						{
+							<span>˃</span>
+							<span>|</span>
+							<span>˃˃</span>
+						}
+					</td>
+				</tr>
+			</table>
+			<input type="hidden" name="pageNumber" id="pageNumber" />
+		</div>
+	</div>
+	<div class="row">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+						Id
+					</th>
+					<th>
+						Imię
+					</th>
+					<th>
+						Nazwisko
+					</th>
+					<th>
+						E-mail
+					</th>
+					<th>
+						Telefon
+					</th>
+					<th>
+						Stanowisko
+					</th>
+					<th>
+						Firma
+					</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model.ContactPeople)
+				{
+					<tr>
+						<td>
+							@Html.DisplayFor(modelItem => item.Id)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.FirstName)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.LastName)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Email)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.PhoneNumber)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Role)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Company)
+						</td>
+						<td>
+							@Html.ActionLink("Edycja", "Edit", new { id = item.Id }) |
+							@Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
+							@Html.ActionLink("Usuwanie", "Delete", new { id = item.Id })
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+</form>
+
+@section Scripts
+  {
+	<script type="text/javascript">
+		function PagerClick(index) {
+			document.getElementById("pageNumber").value = index;
+			document.forms[0].submit();
+		}
+	</script>
+
 }
-    </tbody>
-</table>
