--- a/CrmMVC.Web/Views/Company/Edit.cshtml
+++ b/CrmMVC.Web/Views/Company/Edit.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="VoivodeshipId" class="control-label">Województwo</label>
-                <select asp-for="VoivodeshipId" asp-items="@(new SelectList(Model.Voivodeships,"Id","VoivodeshipName"))" class="form-control">
+                <select asp-for="VoivodeshipId" asp-items="@(new SelectList(Model.Voivodeships,"Id","Name"))" class="form-control">
                     <option></option>
                 </select>
                 <span asp-validation-for="VoivodeshipId" class="text-danger"></span>
@@ -31,7 +31,7 @@
             </div>
             <div class="dropdown">
                 <label asp-for="CompanyTypeId" class="control-label">Typ</label>
-                <select asp-for="CompanyTypeId" asp-items="@(new SelectList(Model.CompanyTypes,"Id","CompanyTypeName"))" class="form-control">
+                <select asp-for="CompanyTypeId" asp-items="@(new SelectList(Model.CompanyTypes,"Id","Name"))" class="form-control">
                     <option></option>
                 </select>
                 <span asp-validation-for="CompanyTypeId" class="text-danger"></span>
