--- a/CrmMVC.Web/Views/Shared/_Layout.cshtml
+++ b/CrmMVC.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="ContactPerson" asp-action="Index">OSOBY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Projects">PROJEKTY</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Project" asp-action="Index">PROJEKTY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Products">PRODUKTY</a>
