--- a/CrmMVC.Web/Views/Project/Index.cshtml
+++ b/CrmMVC.Web/Views/Project/Index.cshtml
@@ -9,37 +9,42 @@
 <p>
     <a asp-action="Create">+ Nowy projekt</a>
 </p>
-<form asp-action="Index" asp-controller="Company" method="post">
+<form asp-action="Index" asp-controller="Project" method="post">
 	<div class="container text-center">
 		<div class="row">
 			<div class="col">
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="companyName">Nazwa</span>
-					@* <input type="text" class="form-control" aria-describedby="companyName" asp-for="CompanyNameSearchString" name="companyNameSearchString" id="companyNameSearchString"> *@
+					<input type="text" class="form-control" aria-describedby="fullName" asp-for="FullNameSearchString" name="fullNameSearchString" id="fullNameSearchString">
+				</div>
+			</div>
+			<div class="col">
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="shortName">Nazwa skrócona</span>
+					<input type="text" class="form-control" aria-describedby="shortName" asp-for="ShortNameSearchString" name="shortNameSearchString" id="shortNameSearchString">
 				</div>
 			</div>
 			<div class="col">
 				<div class="input-group mb-3">
 					<span class="input-group-text" id="city">Miejscowość</span>
-					@* <input type="text" class="form-control" aria-describedby="city" asp-for="CitySearchString" name="citySearchString" id="citySearchString"> *@
+					<input type="text" class="form-control" aria-describedby="city" asp-for="CitySearchString" name="citySearchString" id="citySearchString">
 				</div>
-
 			</div>
 			<div class="row">
 				<div class="col">
 					<div class="input-group mb-3">
 						<label class="input-group-text" for="voivodeship">Województwo</label>
-@* 						<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"Name","Name"))" id="voivodeship">
+						<select class="form-select" asp-for="VoivodeshipSearchString" asp-items="@(new SelectList(Model.Voivodeships,"Name","Name"))" id="voivodeshipSearchString">
 							<option></option>
-						</select> *@
+						</select>
 					</div>
 				</div>
 				<div class="col">
 					<div class="input-group mb-3">
 						<label class="input-group-text" for="type">Typ</label>
-@* 						<select class="form-select" asp-for="CompanyTypeSearchString" asp-items="@(new SelectList(Model.CompanyTypes,"Name","Name"))" id="type">
+						<select class="form-select" asp-for="TypeSearchString" asp-items="@(new SelectList(Model.Types,"Name","Name"))" id="typeSearchString">
 							<option></option>
-						</select> *@
+						</select>
 					</div>
 				</div>
 				<div class="col">
